issues with contrast but orange on gray h2

--- a/css/ncbce-main.css
+++ b/css/ncbce-main.css
@@ -89,6 +89,14 @@ purple = #21145f
 	padding-top: 15px;
 }
 
+.white-out {
+	font-family: 'Roboto Slab', serif;
+	font-size: 2rem;
+	color: var(--main-orange);
+	background-color: #efefef;
+	padding: 10px 20px;
+/*	border-right: 4px solid var(--light-gray);
+*/}
 
 .weekly-map {
 	display: flex;
